/*
 * Discovered via APK analysis (qlf.java, AA v16.1)
 * Logical channel types â€” NOT wire channel IDs.
 * Wire channel IDs (0-14) are assigned at runtime via ServiceDiscoveryResponse.
 */

syntax="proto3";

package oaa.proto.enums;

message ChannelType
{
    enum Enum
    {
        UNKNOWN = 0;
        CONTROL = 1;
        VIDEO_SINK = 2;
        AUDIO_SINK_GUIDANCE = 3;
        AUDIO_SINK_SYSTEM = 4;
        AUDIO_SINK_MEDIA = 5;
        AUDIO_SOURCE = 6;
        SENSOR_SOURCE = 7;
        INPUT_SOURCE = 8;
        BLUETOOTH = 9;
        NAVIGATION_STATUS = 10;
        MEDIA_PLAYBACK_STATUS = 11;
        MEDIA_BROWSER = 12;
        PHONE_STATUS = 13;
        NOTIFICATION = 14;
        RADIO = 15;
        VENDOR_EXTENSION = 16;
        WIFI_PROJECTION = 17;
        WIFI_DISCOVERY = 18;
        CAR_CONTROL = 19;
        CAR_LOCAL_MEDIA = 20;
        BUFFERED_MEDIA_SINK = 21;
    }
}
