/*
 * Discovered via APK analysis (wbu.java / wbt.java, AA v16.1)
 * Sensor channel configuration in ChannelDescriptor field 2.
 * Lists supported sensor types and data formats.
 */

syntax="proto2";

package oaa.proto.data;

// APK class: wbu — sensor channel config
message SensorChannelConfig
{
    repeated SensorTypeEntry supported_sensors = 1;  // APK: wbt — sensor types we support
    optional uint32 update_interval_ms = 2;          // Minimum update interval
    repeated int32 fuel_types = 3;                   // FuelType enum values
    repeated int32 ev_connector_types = 4;           // EVConnectorType enum values
}

// APK class: wbt — individual sensor type entry
message SensorTypeEntry
{
    required int32 sensor_type = 1;  // SensorType enum value
}
